refactor: update dependencies
