# docs/swagger.json
@@ -3,11 +3,11 @@
     "info": {
         "description": "This is a sample server celler server.",
         "title": "Recipes Example API",
-        "termsOfService": "http://bramwork.com/terms/",
+        "termsOfService": "https://bramworks.com/terms/",
         "contact": {
             "name": "API Support",
-            "url": "http://bramwork.com/support",
-            "email": "support@bramwork.com"
+            "url": "https://bramworks.com/support",
+            "email": "support@bramworks.com"
         },
         "license": {
             "name": "Apache 2.0",
@@ -17,7 +17,65 @@
     },
     "host": "localhost:8080",
     "basePath": "/api/v1",
-    "paths": {},
+    "paths": {
+        "/recipes": {
+            "get": {
+                "description": "recipes list",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "recipes"
+                ],
+                "summary": "Return a recipes list",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.Recipe"
+                        }
+                    }
+                }
+            }
+        }
+    },
+    "definitions": {
+        "models.Recipe": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "string"
+                },
+                "ingredients": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "instructions": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "name": {
+                    "type": "string"
+                },
+                "publishedAt": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        }
+    },
     "externalDocs": {
         "description": "OpenAPI",
         "url": "https://bramworks.com/resources/open-api/"
